[package]
name = "server"
version = "1.0.0"
edition = "2021"
description = "Network server interface. Handles accepting connections and processing them on unique threads."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2.11"